--- a/pages/app/mypage/aggregate/style.css
+++ b/pages/app/mypage/aggregate/style.css
@@ -4,3 +4,10 @@
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
 }
+.main-table{
+    display: flex;
+}
+.main-table>div{
+    width: 150px;
+    border: 1px solid black;
+}
