--- a/pages/app/mypage/input/style.css
+++ b/pages/app/mypage/input/style.css
@@ -1,6 +1,6 @@
 .main-content{
     position: absolute;
     left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%);
+    width: 750px;
 }
